增加簡單的胡牌條件及開新牌局的邏輯