@@ -43,14 +43,14 @@ public class MahjongGameTest {
         game.addPlayer(new Player());
         game.start();
 
-        assertEquals(game.getPlayers().get(0).getHandTile().size(), 16);
+        assertEquals(game.getPlayers().get(0).getHandTile().size(), 17);
         assertEquals(game.getPlayers().get(1).getHandTile().size(), 16);
         assertEquals(game.getPlayers().get(2).getHandTile().size(), 16);
         assertEquals(game.getPlayers().get(3).getHandTile().size(), 16);
         int allPlayerDoorFront = game.getPlayers().stream()
                 .mapToInt(p -> p.getDoorFront().size())
                 .sum();
-        assertEquals(game.getLastRound().getDeck().getTile().size(), 144 - 64 - allPlayerDoorFront);
+        assertEquals(game.getLastRound().getDeck().getTile().size(), 144 - 65 - allPlayerDoorFront);
     }
 
     @Test
@@ -64,9 +64,9 @@ public class MahjongGameTest {
                 Arrays.asList("1條", "2條", "8條", "9條", "4條", "3條", "5條", "4條", "1條", "6條", "5條", "7條", "北風", "北風", "東風", "東風"),
                 Arrays.asList("1筒", "2筒", "8筒", "9筒", "4筒", "3筒", "5筒", "4筒", "1筒", "6筒", "5筒", "7筒", "紅中", "白板", "發財", "紅中"),
                 Arrays.asList("白板", "白板", "紅中", "紅中", "發財", "發財", "北風", "北風", "南風", "1萬", "2條", "3筒", "東風", "東風", "西風", "西風")
-        ), List.of());
+        ), Arrays.asList("1萬", "2萬"));
 
-        assertHandTiles(game.getPlayers().get(0), Arrays.asList("1萬", "1萬", "2萬", "3萬", "4萬", "4萬", "5萬", "5萬", "6萬", "7萬", "8萬", "9萬", "東風", "南風", "西風", "北風"));
+        assertHandTiles(game.getPlayers().get(0), Arrays.asList("1萬", "1萬", "1萬", "2萬", "3萬", "4萬", "4萬", "5萬", "5萬", "6萬", "7萬", "8萬", "9萬", "東風", "南風", "西風", "北風"));
         assertHandTiles(game.getPlayers().get(1), Arrays.asList("1條", "1條", "2條", "3條", "4條", "4條", "5條", "5條", "6條", "7條", "8條", "9條", "東風", "東風", "北風", "北風"));
         assertHandTiles(game.getPlayers().get(2), Arrays.asList("1筒", "1筒", "2筒", "3筒", "4筒", "4筒", "5筒", "5筒", "6筒", "7筒", "8筒", "9筒", "紅中", "紅中", "發財", "白板"));
         assertHandTiles(game.getPlayers().get(3), Arrays.asList("1萬", "2條", "3筒", "東風", "東風", "南風", "西風", "西風", "北風", "北風", "紅中", "紅中", "發財", "發財", "白板", "白板"));
@@ -81,18 +81,43 @@ public class MahjongGameTest {
                 Arrays.asList("1條", "1條", "2條", "2條", "3條", "3條", "4條", "4條", "5條", "6條", "7條", "7條", "東風", "東風", "西風", "西風"),
                 Arrays.asList("1條", "1條", "2條", "2條", "3條", "3條", "4條", "4條", "5條", "6條", "7條", "7條", "東風", "東風", "西風", "西風")
         ), Arrays.asList(
-                "梅", "2筒", "3筒", "春", "5筒", "6筒", "7筒", "8筒"
+                "梅", "2筒", "3筒", "春", "5筒", "6筒", "6筒", "7筒", "8筒"
         ));
 
         // then first and second player have 16 hand tiles and 4 door front tiles
         System.out.println(game.getPlayers().get(0).getHandTile());
+        System.out.println(game.getPlayers().get(1).getHandTile());
         assertEquals(game.getPlayers().size(), 4);
-        assertEquals(game.getPlayers().get(0).getHandTile().size(), 16);
-        assertEquals(game.getPlayers().get(0).getDoorFront().size(), 4);
+        assertEquals(game.getPlayers().get(0).getHandTile().size(), 17);
+        assertEquals(game.getPlayers().get(0).getDoorFront().size(), 5);
         assertEquals(game.getPlayers().get(1).getHandTile().size(), 16);
-        assertEquals(game.getPlayers().get(1).getDoorFront().size(), 4);
-        assertHandTiles(game.getPlayers().get(0), Arrays.asList("2筒", "3筒", "7筒"), Arrays.asList(13, 14, 15));
-        assertHandTiles(game.getPlayers().get(1), Arrays.asList("5筒", "6筒", "8筒"), Arrays.asList(13, 14, 15));
+        assertEquals(game.getPlayers().get(1).getDoorFront().size(), 3);
+        assertHandTiles(game.getPlayers().get(0), Arrays.asList("2筒", "3筒", "5筒", "8筒"), Arrays.asList(13, 14, 15, 16));
+        assertHandTiles(game.getPlayers().get(1), Arrays.asList("6筒", "6筒", "7筒"), Arrays.asList(13, 14, 15));
+    }
+
+    @Test
+    void testWinning() {
+//        Arrays.asList("1萬", "1萬", "2萬", "2萬", "3萬", "3萬", "4萬", "5萬", "6萬", "7萬", "7萬", "2條", "3條", "北風", "北風", "北風"),
+
+        MahjongGame game = createGameSample(Arrays.asList(
+                Arrays.asList("1條", "1條", "2條", "3條", "4條", "4條", "5條", "6條", "7條", "7條", "1筒", "3筒", "東風", "東風", "西風", "西風"),
+                Arrays.asList("1萬", "2萬", "3萬", "3萬", "4萬", "5萬", "6萬", "7萬", "8萬", "9萬", "9萬", "2條", "3條", "北風", "北風", "北風"),
+                Arrays.asList("1萬", "1萬", "2萬", "2萬", "3萬", "3萬", "4萬", "4萬", "5萬", "6萬", "7萬", "7萬", "紅中", "紅中", "白板", "白板"),
+                Arrays.asList("1條", "1條", "2條", "2條", "3條", "3條", "4條", "4條", "5條", "6條", "7條", "7條", "東風", "東風", "西風", "西風")
+        ), Arrays.asList(
+                "2筒", "3筒"
+        ));
+
+        // when player 1 discard tile
+        game.play("1", Tile.findTileByName("1條"));
+
+        assertEquals(game.getRounds().size(), 2);
+        assertEquals(game.getLastSecondRound().getWinner().getName(), "2");
+        assertEquals(game.getLastRound().getTurnPlayer().getName(), "2");
+        assertEquals(game.getLastRound().getDealer().getName(), "2");
+        assertEquals(game.getPlayers().get(0).getPoint(), -1);
+        assertEquals(game.getPlayers().get(1).getPoint(), 1);
     }
 
     private void assertHandTiles(Player player, List<String> expectedTiles) {
